--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,10 @@
 
 }
 
+.bg-color-three-reasons {
+    background-color: #fff;
+}
+
 /*----------------Special paddings/margins/text */
 
 h1,
@@ -44,6 +48,23 @@ h4 {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
+}
+
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.sectin-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
 .inline-block {
@@ -193,4 +214,8 @@ footer {
 
 .social-links li a i:hover {
     background-color: #e84610;
+}
+
+#footer-details {
+    padding: 20px;
 }
