--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
     background-color: #676767;
 }
 
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 
@@ -60,7 +64,7 @@ h4 {
     float: none;
 }
 
-.sectin-heading {
+.section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
@@ -218,4 +222,17 @@ footer {
 
 #footer-details {
     padding: 20px;
+}
+
+/*----------------Three reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
+
 }
